# Pythonus

./: .env  README.md  pyproject.toml
src/: 1random.py  2random.py  3random.py  circle.py  noobliin.py  rectangle.py  russianRoulette.py  square.py  sum.py  whiteBull.py
